--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,11 @@
-﻿machine:
+machine:
   timezone:
     America/Los_Angeles
   node:
     version: 0.10.22
   pre:
-    scripts/pre_build.sh	
+    - wget http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.tar.gz -O /tmp/dynamodb_local_latest.tar.gz
+    - tar -xzf /tmp/dynamodb_local_latest.tar.gz -C /tmp
+    - java -Djava.library.path=/tmp/DynamoDBLocal_lib -jar /tmp/DynamoDBLocal.jar -inMemory &
+    - sleep 2
     
