--- a/shipable.yml
+++ b/shipable.yml
@@ -12,6 +12,10 @@ before_script:
   - java -Djava.library.path=/tmp/DynamoDBLocal_lib -jar /tmp/DynamoDBLocal.jar -inMemory &
   - sleep 2
 
+# The path for Xunit to output test reports
+env:
+  - XUNIT_FILE=shippable/testresults/result.xml
+  
 # Create directories for test and coverage reports
 before_script:
   - mkdir -p shippable/testresults
