--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {},
   "devDependencies": {
     "istanbul": "^0.3.5",
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "xunit-file": "0.0.6"
   },
   "scripts": {
     "test": "mocha"
