--- a/shippable.yml
+++ b/shippable.yml
@@ -1,14 +1,18 @@
-﻿language: node_js
-node_js:
-  - "0.10.25"
+﻿# Language setting
+language: node_js
 
+# Version number
+node_js:
+  - 0.10.25
+
+# The path for Xunit to output test reports
 env:
   - XUNIT_FILE=shippable/testresults/result.xml
-  
+
 # Create directories for test and coverage reports
 before_script:
   - mkdir -p shippable/testresults
-  - mkdir -p shippable/codecoverage  
+  - mkdir -p shippable/codecoverage
 
 # Running the tests with grunt
 script:
