--- a/shippable.yml
+++ b/shippable.yml
@@ -22,3 +22,6 @@ script:
 after_script:
   - ./node_modules/.bin/istanbul cover grunt -- -u tdd
   - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
+
+  before_install:
+  - pip install awscli
