--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
-    "name": "NodeCITest",
-    "version": "1.0.0",
-    "description": "NodeCITest",
-    "main": "app.js",
-    "author": "rvdwijngaard",
-    "directories": {
-        "test": "tests"
-    },
-    "dependencies": {
-        "express": "^4.11.2",
-        "vogels": "^2.0.0-rc8"
-    },
-    "devDependencies": {
-        "istanbul": "^0.3.5",
-        "mocha": "^2.1.0",
-        "xunit-file": "0.0.6",
-        "chai": "^1.9.1",
-        "grunt": "^0.4.5",
-        "grunt-express-server": "^0.4.17",
-        "grunt-simple-mocha": "^0.4.0",
-        "superagent": "^0.18.0",
-        "should": "^4.0.1"
-    },
-    "scripts": {
-        "test": "grunt"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/rvdwijngaard/nodeci"
-    },
-    "keywords": [
-        "nodejs"
-    ],
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/rvdwijngaard/nodeci/issues"
-    },
-    "homepage": "https://github.com/rvdwijngaard/nodeci"
+  "name": "NodeCITest",
+  "version": "1.0.0",
+  "description": "NodeCITest",
+  "main": "app.js",
+  "author": "rvdwijngaard",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "express": "^4.11.2",
+    "joi": "^5.1.0",
+    "vogels": "^2.0.0-rc8"
+  },
+  "devDependencies": {
+    "istanbul": "^0.3.5",
+    "mocha": "^2.1.0",
+    "xunit-file": "0.0.6",
+    "chai": "^1.9.1",
+    "grunt": "^0.4.5",
+    "grunt-express-server": "^0.4.17",
+    "grunt-simple-mocha": "^0.4.0",
+    "superagent": "^0.18.0",
+    "should": "^4.0.1"
+  },
+  "scripts": {
+    "test": "grunt"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rvdwijngaard/nodeci"
+  },
+  "keywords": [
+    "nodejs"
+  ],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rvdwijngaard/nodeci/issues"
+  },
+  "homepage": "https://github.com/rvdwijngaard/nodeci"
 }
