àdd newrelic support

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.11.2",
     "joi": "^5.1.0",
+    "newrelic": "^1.16.2",
     "vogels": "^2.0.0-rc8"
   },
   "devDependencies": {
